--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -14,8 +14,9 @@
 <axis axis="move_vertical" key="gamepad_right_trigger" scale="1" sensitivity="0.5">
 <axis axis="move_vertical" key="gamepad_left_trigger" scale="-1" sensitivity="0.5">
 
-<axis axis="reload_shaders" key="r" scale="1" sensitivity="1">
-<axis axis="show_shadow_map" key="t" scale="1" sensitivity="1">
-<axis axis="swap_fxaa_shaders" key="y" scale="1" sensitivity="1">
-<action action="move_forward" key="w" sensitivity="1">
-<action action="move_forward" key="s" sensitivity="-1">
+<action action="reload_shaders" key="r">
+<action action="show_shadow_map" key="t">
+<action action="swap_fxaa_shaders" key="y">
+<action action="print_press" key="f">
+<action action="print_press" key="g">
+<action action="print_press" key="h">
