--- a/engine/dependencies/stb/CMakeLists.txt
+++ b/engine/dependencies/stb/CMakeLists.txt
@@ -12,7 +12,7 @@ target_sources(${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME}
     PROPERTIES
-    FOLDER "stb"
+    FOLDER "${ENGINE_DEPENDENCIES_FOLDER}/stb"
     LINKER_LANGUAGE CXX
 )
 
