Level Editor! I mean, working editor is a pretty distant future, but I have a window inside a window that draws the scene! Cool, isn't it? I also have 2 main functions now that are conditionally compiled. That's becoming black magic at this point Other changes: Moved Renderer out of renderer namespace Framebuffer too transform namespace moved into math opengl wrapper stuffs More keys Window stuffs

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -20,3 +20,4 @@
 <action action="print_press" key="f">
 <action action="print_press" key="g">
 <action action="print_press" key="h">
+<action action="capture_mouse" key="u">
