--- a/engine/source/windowing/private/CMakeLists.txt
+++ b/engine/source/windowing/private/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/window.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/window_callbacks.cpp"
     PARENT_SCOPE
 )
