--- a/engine/source/shaders/private/CMakeLists.txt
+++ b/engine/source/shaders/private/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SOURCE_FILES 
     ${SOURCE_FILES}
-    "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader_file.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader_exceptions.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader_manager.cpp"
