Material now stores mesh's textures

--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -22,6 +22,7 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/assets.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/key.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/material.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/resource_manager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/time.hpp"
     PARENT_SCOPE
