Split engine into lightweight loader and engine dll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(BUILD_SHARED_LIBS OFF)
 
-set(GAMEENGINE_FOLDER_NAME "Engine")
+set(ENGINE_NAME ${PROJECT_NAME})
+set(ENGINE_LOADER_NAME "${PROJECT_NAME}Loader")
+set(ENGINE_FOLDER_NAME "Engine")
 set(ENGINE_DEPENDENCIES_FOLDER "Dependencies")
+set(ENGINE_TOOLS_FOLDER "Tools")
 
 find_package(OpenGL REQUIRED)
 add_subdirectory(engine)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
 
 # Compiler flags
 if(MSVC)
