--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -21,11 +21,12 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/enum.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/path.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/simple_xml_parser.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/class_macros.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/config.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/debug_macros.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/handle.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/id_generator.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/integer_sequence_generator.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/iterators.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/macro_undefs.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization.hpp"
