--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,12 +1,16 @@
 set(SOURCE_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/engine.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/module_loader.cpp"
 )
 
 set(HEADER_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/engine.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/subsystem_forward_declarations.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/build_config.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/component_serialization_funcs.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/dll_build_config.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/engine_main.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/engine.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/module_loader.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/subsystem_forward_declarations.hpp"
 )
 
 add_subdirectory(core/public)
