--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_registry.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_registry.generated.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_serialization.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/ecs.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/entity.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input_core.cpp"
