--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -14,6 +14,7 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_access.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_registry.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_serialization.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/ecs.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/entity.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input.hpp"
