moved imgui to a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glfw"]
 	path = engine/dependencies/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "engine/dependencies/imgui"]
+	path = engine/dependencies/imgui
+	url = https://github.com/kociap/imgui.git
