--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,15 +3,6 @@ set_target_properties(${ENGINE_NAME}
     PROPERTIES
     FOLDER ${ENGINE_FOLDER_NAME}
     WINDOWS_EXPORT_ALL_SYMBOLS ON # Export all symbols, so we don't have to do it manually via macros
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
 )
 
 target_compile_definitions(${ENGINE_NAME} PRIVATE COMPILING_DLL)
@@ -23,16 +14,29 @@ add_subdirectory(editor)
 add_subdirectory(shaders)
 
 target_link_libraries(${ENGINE_NAME}
-    ${OPENGL_LIBRARIES}
-    glad    
-    glfw
-    stb
-    assimp
-    imgui
+${OPENGL_LIBRARIES}
+glad    
+glfw
+stb
+assimp
+imgui
 )
 
-# get_target_property(ENGINE_INCLUDE_DIRECTORIES ${ENGINE_NAME} INCLUDE_DIRECTORIES)
-# add_subdirectory(tools)
+get_target_property(ENGINE_INCLUDE_DIRECTORIES ${ENGINE_NAME} INCLUDE_DIRECTORIES)
+add_subdirectory(tools)
+
+set_target_properties(${ENGINE_NAME} Codegen
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+)
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${SOURCE_FILES_ROOT} ${HEADER_FILES_ROOT})
 
