--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -2,10 +2,11 @@ add_library(${ENGINE_NAME} SHARED)
 set_target_properties(${ENGINE_NAME}
     PROPERTIES
     FOLDER ${ENGINE_FOLDER_NAME}
-    WINDOWS_EXPORT_ALL_SYMBOLS ON # Export all symbols, so we don't have to do it manually via macros
+    WINDOWS_EXPORT_ALL_SYMBOLS ON
 )
 
-target_compile_definitions(${ENGINE_NAME} PRIVATE COMPILING_DLL)
+target_compile_definitions(${ENGINE_NAME} PRIVATE ENGINE_API=${ENGINE_DLL_EXPORT} GAME_API=${ENGINE_DLL_IMPORT})
+target_compile_options(${ENGINE_NAME} PRIVATE ${ENGINE_CXX_FLAGS})
 
 find_package(OpenGL REQUIRED)
 add_subdirectory(dependencies)
@@ -24,8 +25,9 @@ target_link_libraries(${ENGINE_NAME}
 )
 
 get_target_property(ENGINE_INCLUDE_DIRECTORIES ${ENGINE_NAME} INCLUDE_DIRECTORIES)
-add_subdirectory(tools)
 
+add_subdirectory(tools)
+target_compile_definitions(Codegen PRIVATE ENGINE_API=${ENGINE_DLL_IMPORT})
 set_target_properties(${ENGINE_NAME} Codegen
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
@@ -69,18 +71,20 @@ set(ENGINE_LOADER_SOURCE_FILES
 )
 
 add_executable(${ENGINE_LOADER_NAME} ${ENGINE_LOADER_SOURCE_FILES})
+target_compile_definitions(${ENGINE_LOADER_NAME} PRIVATE ENGINE_API=${ENGINE_DLL_IMPORT})
+target_compile_options(${ENGINE_LOADER_NAME} PRIVATE ${ENGINE_CXX_FLAGS})
 set_target_properties(${ENGINE_LOADER_NAME}
     PROPERTIES
     FOLDER ${ENGINE_FOLDER_NAME}
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
+    RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
 )
 
 target_link_libraries(${ENGINE_LOADER_NAME} ${ENGINE_NAME})
