--- a/engine/dependencies/CMakeLists.txt
+++ b/engine/dependencies/CMakeLists.txt
@@ -15,3 +15,15 @@ set_target_properties(glfw assimp imgui stb glad zlib_lib zlibstatic_lib
     PROPERTIES
     FOLDER "${ENGINE_DEPENDENCIES_FOLDER}"
 )
+
+if(MSVC)
+    set_target_properties(glfw assimp imgui stb glad zlib_lib zlibstatic_lib
+        PROPERTIES
+        COMPILE_OPTIONS "/W0"
+    )
+elseif("${CMAKE_CXX_COMPILER_ID}" matches "GCC" or "${CMAKE_CXX_COMPILER_ID}" matches "Clang")
+    set_target_properties(glfw assimp imgui stb glad zlib_lib zlibstatic_lib
+        PROPERTIES
+        COMPILE_OPTIONS "-Wno-everything"
+    )
+endif()
