Removed assimp - long compile times are no more Paths to simplify filesystem accesses Lots of temporary code "to just get it working"

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -19,15 +19,22 @@ target_link_libraries(${ENGINE_NAME}
     glad    
     glfw
     stb
-    assimp
     imgui
-    zlibstatic_lib
+    zlibstatic
 )
 
 get_target_property(ENGINE_INCLUDE_DIRECTORIES ${ENGINE_NAME} INCLUDE_DIRECTORIES)
 
 add_subdirectory(tools)
 target_compile_definitions(Codegen PRIVATE ENGINE_API=${ENGINE_DLL_IMPORT})
+set_target_properties(${ENGINE_NAME}
+    PROPERTIES
+    RUNTIME_OUTPUT_NAME_DEBUG "${ENGINE_NAME}d"
+    LIBRARY_OUTPUT_NAME_DEBUG "${ENGINE_NAME}d"
+    ARCHIVE_OUTPUT_NAME_DEBUG "${ENGINE_NAME}d"
+)
+
+
 set_target_properties(${ENGINE_NAME} Codegen
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
@@ -79,12 +86,7 @@ set_target_properties(${ENGINE_LOADER_NAME}
     RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    LIBRARY_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
-    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_NAME_DEBUG "${ENGINE_LOADER_NAME}d"
 )
 
 target_link_libraries(${ENGINE_LOADER_NAME} ${ENGINE_NAME})
