--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -21,7 +21,7 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/archives/binary.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/serialization.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/enum.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/utils/path.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/utils/filesystem.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/simple_xml_parser.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/class_macros.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.hpp"
