Moved from imgui (it's terrible) to Qt Viewports in dockable windows Some of the old functionality is missing (will add soon) Time renamed to timing (ugh) becuase of collision with time.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ if(MSVC)
     set(ENGINE_CXX_FLAGS "/W4")
     set(ENGINE_DLL_EXPORT "__declspec(dllexport)")
     set(ENGINE_DLL_IMPORT "__declspec(dllimport)")
-elseif("${CMAKE_CXX_COMPILER_ID}" matches "GCC" or "${CMAKE_CXX_COMPILER_ID}" matches "Clang")
-    set(ENGINE_CXX_FLAGS "-Wall -Wextra")
+elseif("${CMAKE_CXX_COMPILER_ID}" matches "GNU" or "${CMAKE_CXX_COMPILER_ID}" matches "Clang")
+    set(ENGINE_CXX_FLAGS "-Wall -Wextra -Werror -Wno-error=unused-const-variable -Wno-error=unused-parameter -Wno-error=unused-variable")
     set(ENGINE_DLL_EXPORT "")
     set(ENGINE_DLL_IMPORT "")
 endif()
