--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SOURCE_FILES
+    "${CMAKE_CURRENT_SOURCE_DIR}/engine_main.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/engine.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/module_loader.cpp"
 )
@@ -6,7 +7,6 @@ set(SOURCE_FILES
 set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/build_config.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/component_serialization_funcs.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/engine_main.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/engine.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/module_loader.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/subsystem_forward_declarations.hpp"
