--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -1,5 +1,12 @@
+if(WIN32) # TODO other platforms
+    set(PLATFORM_SOURCES 
+        "${CMAKE_CURRENT_SOURCE_DIR}/time/time_win.cpp"
+    )
+endif()
+
 set(SOURCE_FILES 
     ${SOURCE_FILES}
+    ${PLATFORM_SOURCES}
     "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.cpp"
@@ -12,7 +19,6 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/time/time.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/time/time_core.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/assets.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/key.cpp"
@@ -23,6 +29,7 @@ set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input_core.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/time/time_core.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/time/time_platform.hpp"
     PARENT_SCOPE
 )
 
