--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE_FILES
     ${SOURCE_FILES}
     ${PLATFORM_SOURCES}
     "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/entity_name.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_serialization.cpp"
