--- a/engine/editor/outliner/private/CMakeLists.txt
+++ b/engine/editor/outliner/private/CMakeLists.txt
@@ -10,6 +10,11 @@ set(HEADER_FILES
     PARENT_SCOPE
 )
 
+set(UI_FILES
+    ${UI_FILES}
+    PARENT_SCOPE
+)
+
 set(PRIVATE_INCLUDE_DIRECTORIES
     ${PRIVATE_INCLUDE_DIRECTORIES}
     "${CMAKE_CURRENT_SOURCE_DIR}"
