--- a/engine/source/core/private/CMakeLists.txt
+++ b/engine/source/core/private/CMakeLists.txt
@@ -1,4 +1,17 @@
-set(SOURCE_FILES ${SOURCE_FILES}
+if(WIN32) # TODO other platforms
+    set(PLATFORM_SOURCES 
+        "${CMAKE_CURRENT_SOURCE_DIR}/assert/assert_win.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/windows/common.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/windows/debugging.cpp"
+    )
+
+    set(PLATFORM_HEADERS
+        "${CMAKE_CURRENT_SOURCE_DIR}/windows/common.hpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/windows/debugging.hpp"
+    )
+endif()
+
+set(SOURCE_FILES ${SOURCE_FILES} ${PLATFORM_SOURCES}
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/allocator.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_iterators.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_view.cpp"
@@ -13,6 +26,7 @@ set(SOURCE_FILES ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/math/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/math.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/archives/binary.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/unicode/common.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/filesystem.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/simple_xml_parser.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.cpp"
@@ -21,7 +35,7 @@ set(SOURCE_FILES ${SOURCE_FILES}
     PARENT_SCOPE
 )
 
-set(HEADER_FILES ${HEADER_FILES}
+set(HEADER_FILES ${HEADER_FILES} ${PLATFORM_HEADERS}
     "${CMAKE_CURRENT_SOURCE_DIR}/paths_internal.hpp"
     PARENT_SCOPE
 )
