--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -17,6 +17,7 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/pair.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/static_string.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/static_vector.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_utils.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_view.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/type_traits.hpp"
@@ -35,9 +36,11 @@ set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/memory/stack_allocate.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/archives/binary.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/serialization.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/unicode/common.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/enum.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/filesystem.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/simple_xml_parser.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/assert.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/class_macros.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/config.hpp"
