Bugfix: Qt takes argc& and requires argc/v outlive it

--- a/engine/editor/widgets/private/CMakeLists.txt
+++ b/engine/editor/widgets/private/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/dock_widget.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/editor_qapplication.cpp"
     PARENT_SCOPE
 )
 
