--- a/engine/editor/widgets/public/CMakeLists.txt
+++ b/engine/editor/widgets/public/CMakeLists.txt
@@ -2,6 +2,7 @@ set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/dock_widget.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/editor_qapplication.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/list_widget.hpp"
     PARENT_SCOPE
 )
 
