--- a/engine/source/core/private/CMakeLists.txt
+++ b/engine/source/core/private/CMakeLists.txt
@@ -20,15 +20,7 @@ set(SOURCE_FILES ${SOURCE_FILES} ${PLATFORM_SOURCES}
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_iterators.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string_view.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/anton_stl/string.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector2.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector3.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector4.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix2.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix3.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix4.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/quaternion.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/transform.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/math/math.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/serialization/archives/binary.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/unicode/common.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/utils/filesystem.cpp"
