Renamed folder `renderer` to `rendering`

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -16,8 +16,8 @@ add_subdirectory(core/public)
 add_subdirectory(core/private)
 add_subdirectory(shaders/public)
 add_subdirectory(shaders/private)
-add_subdirectory(renderer/public)
-add_subdirectory(renderer/private)
+add_subdirectory(rendering/public)
+add_subdirectory(rendering/private)
 add_subdirectory(engine/public)
 add_subdirectory(engine/private)
 add_subdirectory(physics/public)
